--- a/WPFMVVM/App.xaml
+++ b/WPFMVVM/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WPFMVVM"
-             StartupUri="View/MainPage.xaml">
+             StartupUri="View/MainPage.xaml" ShutdownMode="OnMainWindowClose">
     <Application.Resources>
          
     </Application.Resources>
