--- a/WPFMVVM/View/MainPage.xaml
+++ b/WPFMVVM/View/MainPage.xaml
@@ -1,7 +1,9 @@
 ﻿<Window x:Class="WPFMVVM.View.MainPage"
-         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"  
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"  
-        Title="MainWindow" Height="485" Width="525">
+          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:prism="http://prismlibrary.com/"
+    Width="600"
+    prism:ViewModelLocator.AutoWireViewModel="True">
     <Grid Margin="0,0,0,20">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="525*"/>
