--- a/WPFMVVM/View/MainPage.xaml
+++ b/WPFMVVM/View/MainPage.xaml
@@ -2,8 +2,7 @@
           xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:prism="http://prismlibrary.com/"
-    Width="600"
-    prism:ViewModelLocator.AutoWireViewModel="True">
+    Width="600">
     <Grid Margin="0,0,0,20">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="525*"/>
